# rnmf

./: .gitignore  Cargo.toml  README.md  test.lua
.github/workflows/: rust.yml
derive/: Cargo.toml
derive/src/: lib.rs
examples/: example.lua
examples/magnetostatics/: magnetostatics.lua  main.rs  model.rs  plot.py  poisson.rs  psi_final.csv  psi_initial.csv  test.csv
src/: boundary_conditions.rs  config.rs  data_frame.rs  global.rs  io.rs  lib.rs  main.rs  mesh.rs  solver.rs
src/mesh/: cartesian.rs  cartesian1d.rs  cartesian2d.rs  cartesian3d.rs  cartesian_any_d.rs  mod.rs
src/mesh/cartesian2d/: block.rs  dataframe.rs  mesh.rs  mod.rs
