[package]
name = "rnmf"
version = "0.1.0"
authors = ["wattrg <wattrg@hotmail.com>"]
edition = "2018"

[lib]
name="rnmf"
path="src/lib.rs"

#[[bin]]
#name="rnmf_bin"
#path="src/main.rs"

[features]
disable_double = []
dumb_terminal = ["colored/no-color"]
cartesian = []
multi_buffer = []

[dependencies]
rlua = "0.17.0"
#derive = {version="0.1.0", path = "./derive"}
indicatif = "0.15.0"
vtkio = "0.6"
colored = "2.0"
log = "0.4"
